fix browser searchbar bug on mobile

--- a/custom-elements/apps/browser.css
+++ b/custom-elements/apps/browser.css
@@ -10,7 +10,6 @@
 .browser .top-bar {
     display: flex;
     gap: 0.3rem;
-    align-items: center;
 }
 
 .top-bar button {
@@ -31,10 +30,15 @@
     cursor: pointer;
 }
 
-.browser input {
-    box-sizing: border-box;
+.browser form {
     width: 100%;
     height: calc(100% - 0.8rem);
+}
+
+.browser form input {
+    box-sizing: border-box;
+    width: 100%;
+    height: 100%;
     border: 0;
     border-radius: 3px;
     outline: 2px solid transparent;
